try to remove bug on Iphone about header calendar display

--- a/app/assets/stylesheets/consultation/_calendar.scss
+++ b/app/assets/stylesheets/consultation/_calendar.scss
@@ -1,5 +1,7 @@
 .calendar-header {
   box-shadow: inset 2px -7px 11px rgba(80, 92, 51, 0.17);
+  width: 100%;
+  height: 100%;
 }
 
 .calendar-action-date {
